--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               ><i class="fa fa-bell" aria-hidden="true"></i>&nbsp;Programs</a>
           </div>
           <div class="navhp-item">
-            <a href="#" id="darkModeToggle"
+            <a href="#" id="darkModeToggleLeft"
               ><i class="fa fa-moon-o" aria-hidden="true"></i>&nbsp;Theme</a>
           </div>
         </div>
@@ -102,7 +102,7 @@ function toggleMenu() {
           >
         </div>
         <div class="navbar-item">
-          <a href="#" id="darkModeToggle"
+          <a href="#" id="darkModeToggleLeft"
             ><i class="fa fa-moon-o" aria-hidden="true"></i>&nbsp;Theme</a
           >
         </div>
