--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               ><i class="fa fa-bell" aria-hidden="true"></i>&nbsp;Programs</a>
           </div>
           <div class="navhp-item">
-            <a href="#" id="darkModeToggleLeft"
+            <a href="#" id="darkModeToggle"
               ><i class="fa fa-moon-o" aria-hidden="true"></i>&nbsp;Theme</a>
           </div>
         </div>
